Experience Update in portfolio.

--- a/index.html
+++ b/index.html
@@ -333,11 +333,12 @@
               <h5>Apr 2022 - Present</h5>
               <p><em>Technology Wisdom, Lahore, Pakistan</em></p>
               <ul>
-                <li><strong>Project Management & Team Coordination:</strong> Independently manage website projects from conception to completion, assign tasks, and train juniors.</li>
-                <li><strong>Client Communication & Technical Translation:</strong> Effectively communicate with clients and team members, translating requirements into clear technical specifications.</li>
-                <li><strong>Web Development Expertise:</strong> Skilled in developing responsive websites using HTML, CSS, Bootstrap, JavaScript, and PHP, with experience in MySQL for data manipulation and retrieval.</li>
-                <li><strong>WordPress Development:</strong> Proficient in custom theme and plugin development, WooCommerce store setup, and working with the WordPress platform.</li>
-              </ul>
+                <li><strong>Project Management & Team Coordination:</strong> Independently managed website projects from conception to completion, assigned tasks, trained juniors, and ensured high-quality, timely delivery.</li>
+                <li><strong>Client Communication & Technical Translation:</strong> Effectively communicated with clients and team members, translating business requirements into clear technical specifications for seamless project execution.</li>
+                <li><strong>Web Development Expertise:</strong> Skilled in developing responsive, SEO-friendly websites using <strong>HTML, CSS, Bootstrap, JavaScript, AJAX, and PHP (Core & WordPress)</strong>, with expertise in <strong>MySQL</strong> for efficient data manipulation and retrieval.</li>
+                <li><strong>WordPress Development:</strong> Specialized in custom theme and plugin development, WooCommerce store setup, CRM integrations, custom WordPress solutions, payment gateway integrations (PayPal, Stripe, etc.), automated email workflows, and Twilio WhatsApp messaging.</li>
+                <li><strong>Advanced WordPress Features:</strong> Proficient in Elementor, ACF, CPTs, Custom Taxonomies, Hooks & Filters, API integrations, GA4 setup, website migrations, and DNS configurations to enhance functionality and performance.</li>
+              </ul>            
             </div><!-- Edn Resume Item -->
             
             <div class="resume-item">
