--- a/index.html
+++ b/index.html
@@ -319,6 +319,13 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
+              <h4>Web Designing and Development</h4>
+              <h5>March 2018</h5>
+              <p><em>The Net Rider, Multan</em></p>
+              <p>Completed a 3-month course covering HTML, CSS, JavaScript, PHP, MySQL, and WordPress, gaining hands-on experience in web development.</p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
               <h4>ICS</h4>
               <h5>2015 - 2017</h5>
               <p><em>City College of Science and Commerce, Multan</em></p>
