--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Web Developer</h4>
+              <h4>Senior Web Developer</h4>
               <h5>Apr 2022 - Present</h5>
               <p><em>Technology Wisdom, Lahore, Pakistan</em></p>
               <ul>
