New Portfolio Project Axios Ventures

--- a/index.html
+++ b/index.html
@@ -392,6 +392,42 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-plugin">
               <div class="portfolio-content h-100">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/time-limited-content-access/hero-section.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Time-Limited Content Access</h4>
+                  <p>A custom WordPress theme published in the official WordPress repository.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/time-limited-content-access/hero-section.webp" title="Time-Limited Content Access" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-time-limited-content-access.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
+              <div class="portfolio-content h-100">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/dr-education-consulting/hero-section.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>DR. Education Consulting</h4>
+                  <p>A WordPress website built using a Prebuilt theme.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/dr-education-consulting/hero-section.webp" title="DR. Education Consulting" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-dr-education-consulting.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
+              <div class="portfolio-content h-100">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/axios-ventures/hero-section.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Axios Ventures</h4>
+                  <p>A WordPress website built using a Prebuilt theme.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/axios-ventures/hero-section.webp" title="Axios Ventures" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-axios-ventures.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-plugin">
+              <div class="portfolio-content h-100">
                 <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/instant-emoji-reactions/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Instant Emoji Reactions</h4>
