--- a/project-dr-education-consulting.html
+++ b/project-dr-education-consulting.html
@@ -138,6 +138,7 @@
                 <p><strong>✔ Website Revamp & Redesign:</strong> Revamped the existing website using a pre-built WordPress theme and Elementor, giving it a modern, professional look tailored to an international education consultancy.</p>
                 <p><strong>✔ Elementor-Based Customization:</strong> Customized layouts, sections, and styling with Elementor for easier content management and seamless alignment with the brand's global presence.</p>
                 <p><strong>✔ User-Friendly Structure:</strong> Reorganized content and optimized site navigation to ensure a clear user journey for students exploring study abroad options across 800+ partner universities.</p>
+                <p><strong>✔ Advanced Search Functionality:</strong> Implemented custom search filters on the universities page, enabling users to easily explore and refine results from over 800 global partner institutions.</p>
             </div>
           </div>
 
